--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-# API Configuration
-VITE_API_BASE_URL=http://localhost:8080
-VITE_APP_NAME=Esport News
-VITE_APP_VERSION=1.0.0
+VITE_API_BASE_URL=http://192.168.1.98:8080
+VITE_DEBUG_MODE=true
