--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "setup-network": "node setup-network.js"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.3.0",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
